--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -64,15 +64,6 @@ a {
     z-index: 1;
 }
 
-.hero-wrap {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #e6f0ff;
-    height: calc(100vh - 90px);
-    position: relative;
-}
-
 .navbar {
     display: flex;
     align-items: center;
@@ -109,6 +100,15 @@ a {
     padding: 13px 16px;
     margin-left: 18px;
     border-radius: 8px;
+}
+
+.hero-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #e6f0ff;
+    height: calc(100vh - 90px);
+    position: relative;
 }
 
 .hero-wrap .info {
@@ -369,7 +369,7 @@ a {
     letter-spacing: 0.01em;
     color: #4d4d52;
 }
-
+/* Stats */
 .stats {
     margin-top: 75px;
     padding: 50px 0;
